# bsopt

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
scripts/: demo_sabr_fit.py
src/bsopt/: __init__.py  american.py  binomial.py  black_scholes.py  cli.py  cos.py  density.py  heston.py  iv.py  lsm.py  monte_carlo.py  pde.py  plots.py  sabr.py  speed.py
tests/: test_black_scholes.py  test_cos_vs_bs.py  test_iv.py  test_lsm_bounds.py  test_parity_monotone.py  test_pde_american_bounds.py
